[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ZombieSpawn.gd" type="Script" id=1]

[node name="ZombieSpawn" type="ColorRect"]
rect_min_size = Vector2( 50, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
level = null
spawn_timer = null
spawn_chance = null

[node name="SpawnTimer" type="Timer" parent="."]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
